--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 20px;
 }
 
 nav {
@@ -37,21 +38,6 @@ body{
     font-family: fantasy;
     text-align: center;
     font-size: xx-large;
-}
-
-p{
-    font-size:large;
-    width: 1250px;
-}
-
-.thingy{
-    margin-left: 15px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.Reviews{
-    margin-left: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 a:hover {
